added portfolio, editing pages

--- a/info/about.html
+++ b/info/about.html
@@ -57,6 +57,7 @@
           <p> <span class ="highlightInfo"> Ultimately, I am interested in curating space and narratives in the physical world through digital and experiential design. </span> I am currently working at the Center for Spatial Research and the Temple Hoyne Buell Center for the study of American Architecture at Columbia University. I graduated with a Bachelor of Arts in Architecture from Barnard College in 2016 and have previously interned at architectural firms. </p>
         </div>
         <div class = "col-md-6 col-sm-6 item">
+          <a href="../pdf/TolaOniyangi_Portfolio.pdf"  target="_blank"> Portfolio </a> 
           <a href="../pdf/TolaOniyangi_Resume.pdf"  target="_blank"> Resume </a> 
           <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn</a> 
           <a href="https://github.com/tolaoniyangi"  target="_blank"> Github</a> 
