--- a/projects/bridge.html
+++ b/projects/bridge.html
@@ -74,7 +74,7 @@
           <div class="col-md-6">
             <img src="../img/bridge_SketchPlan.jpg"> 
           </div>
-          <div class="col-md-4">
+<!--           <div class="col-md-4">
             <img src="../img/bridge_ModelWindSide.jpg"> 
           </div>
           <div class="col-md-4">
@@ -82,7 +82,7 @@
           </div>
           <div class="col-md-4">
             <img src="../img/bridge_ModelGround.jpg"> 
-          </div>
+          </div> -->
           <div class="col-md-12">
             <img src="../img/bridge_SitePlan.jpg"> 
           </div>
