--- a/projects/library.html
+++ b/projects/library.html
@@ -67,7 +67,7 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-4">
+<!--           <div class="col-md-4">
             <img src="../img/library_FoamTrace3.jpg"> 
           </div>
           <div class="col-md-4">
@@ -75,13 +75,22 @@
           </div>
           <div class="col-md-4">
             <img src="../img/library_FoamTrace5.jpg"> 
-          </div>
+          </div> -->
           <div class="col-md-6">
             <img src="../img/library_SiteModel.jpg"> 
           </div>
           <div class="col-md-6">
             <img src="../img/library_ModelVoid.jpg"> 
           </div>
+           
+          <div class="col-md-4">
+            <img src="../img/library_miniplan.png"> 
+          </div>
+          <div class="col-md-9"></div>
+          <div class="col-md-12">
+            <img src="../img/library_section.jpg"> 
+          </div>
+
           <div class="col-md-12"></div>
           <div class="col-md-12">
             <img src="../img/library_5thfloorsection.jpg"> 
@@ -101,13 +110,7 @@
           <div class="col-md-12">
             <img src="../img/library_basementsection.jpg"> 
           </div>
-          <div class="col-md-4">
-            <img src="../img/library_miniplan.png"> 
-          </div>
-          <div class="col-md-9"></div>
-          <div class="col-md-12">
-            <img src="../img/library_section.jpg"> 
-          </div>
+
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
           </div>
