updated old pages

--- a/projects/citibike.html
+++ b/projects/citibike.html
@@ -68,6 +68,7 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
+          
           <div class="col-md-8">
             <div id="linkedImage">
               <a href="../pdf/citibike_FinalReport.pdf" target="_blank">
@@ -75,6 +76,25 @@
               </a>   
             </div>
           </div>
+
+<!--           <div class="col-md-4">
+            <img src="../img/citibike_Indicator_CBS.png"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/citibike_Indicator_NoAccess.png"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/citibike_Indicator_SS_CBS.png"> 
+          </div> -->
+
+          <div class="col-md-12">
+            <img src="../img/citibike_DemographicsMethodology.png"> 
+          </div>
+          <!-- <div class="col-md-12"></div> -->
+          <div class="col-md-12">
+            <img src="../img/citibike_NetworkMethodology.png"> 
+          </div>
+
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
           </div>
