--- a/projects/globaltrajectories.html
+++ b/projects/globaltrajectories.html
@@ -56,7 +56,7 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2> How can we study the relationship between precolonial Africa and the world through the people themselves? </h2>
-          <p> This mapping and aggregation project explores how (West) Africans interacted with the world from an African perspective using data gleaned from autobiographical and biographical accounts. Numbering 154 pages, the book presents the journeys undertaken by four men from what is now northern Nigeria on three scales. It presents an overall view of travel, zooms into specific journeys and trajectories, and finally, zooms into principal points along this journey. The final layer incorporates the personal experiences of the subjects by including direct quotes describing their journeys and destinations.
+          <p> This mapping and aggregation <a href="../pdf/globaltrajectories.pdf"  target="_blank"> project </a>  explores how (West) Africans interacted with the world from an African perspective using data gleaned from autobiographical and biographical accounts. Numbering 154 pages, the book presents the journeys undertaken by four men from what is now northern Nigeria on three scales. It presents an overall view of travel, zooms into specific journeys and trajectories, and finally, zooms into principal points along this journey. The final layer incorporates the personal experiences of the subjects by including direct quotes describing their journeys and destinations.
           </p> 
           <p class="additionalInfo"> Fall 2015. Supervised by Ralph Ghoche.
           </p>    
@@ -77,6 +77,17 @@
               </a>   
             </div>
           </div>
+
+          <div class="col-md-8">
+            <img src="../img/indResearch_Page_1.jpg"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/indResearch_Page_2.jpg"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/indResearch_Page_4.jpg"> 
+          </div>
+
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
           </div>
