--- a/projects/library.html
+++ b/projects/library.html
@@ -67,49 +67,42 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-<!--           <div class="col-md-4">
-            <img src="../img/library_FoamTrace3.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/library_FoamTrace4.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/library_FoamTrace5.jpg"> 
-          </div> -->
-          <div class="col-md-6">
-            <img src="../img/library_SiteModel.jpg"> 
-          </div>
-          <div class="col-md-6">
-            <img src="../img/library_ModelVoid.jpg"> 
-          </div>
-           
-          <div class="col-md-4">
-            <img src="../img/library_miniplan.png"> 
-          </div>
-          <div class="col-md-9"></div>
+
+          <div class="col-md-8">
+            <img src="../img/library_conceptComposite.png"> 
+          </div>     
+
           <div class="col-md-12">
-            <img src="../img/library_section.jpg"> 
+            <img src="../img/library_sectionVoid+plan.png"> 
           </div>
 
           <div class="col-md-12"></div>
-          <div class="col-md-12">
-            <img src="../img/library_5thfloorsection.jpg"> 
+
+          <div class="col-md-8">
+            <img src="../img/library_SiteModel.jpg"> 
           </div>
-          <div class="col-md-12">
-            <img src="../img/library_4thfloorsection.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/library_3rdfloorsection.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/library_2ndfloorsection.jpg"> 
+
+          <div class="col-md-12"></div>
+
+          <div class="col-md-10">
+            <img src="../img/library_5thfloorsection.png"> 
           </div>
           <div class="col-md-10">
-            <img src="../img/library_1stfloorsection.jpg"> 
+            <img src="../img/library_4thfloorsection.png"> 
           </div>
-          <div class="col-md-12">
-            <img src="../img/library_basementsection.jpg"> 
+          <div class="col-md-10">
+            <img src="../img/library_3rdfloorsection.png"> 
           </div>
+          <div class="col-md-10">
+            <img src="../img/library_2ndfloorsection.png"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/library_1stfloorsection.png"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/library_basementsection.png"> 
+          </div>
+
 
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
