--- a/projects/bridge.html
+++ b/projects/bridge.html
@@ -68,33 +68,24 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-6">
-            <img src="../img/bridge_SketchSection.jpg"> 
-          </div>
-          <div class="col-md-6">
-            <img src="../img/bridge_SketchPlan.jpg"> 
-          </div>
-<!--           <div class="col-md-4">
-            <img src="../img/bridge_ModelWindSide.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWind.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelGround.jpg"> 
-          </div> -->
+
           <div class="col-md-12">
-            <img src="../img/bridge_SitePlan.jpg"> 
+            <img src="../img/bridge_longSection.png"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section1-1.jpg"> 
+
+          <div class="col-md-10">
+            <img src="../img/bridge_crossSection.png"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section2-2.jpg"> 
-          </div>
-          <div class="col-md-4">
+
+          <div class="col-md-2">
             <img src="../img/bridge_PlanSection.png"> 
           </div>
+
+          <div class="col-md-12">
+            <img src="../img/bridge_SitePlan.png"> 
+          </div>
+
+
           <div class="col-md-12">
             <img src="../img/bridge_RenderFar.jpg"> 
           </div>
