added subway and pier pages

--- a/projects/citibike.html
+++ b/projects/citibike.html
@@ -86,12 +86,13 @@
           <div class="col-md-4">
             <img src="../img/citibike_Indicator_SS_CBS.png"> 
           </div> -->
+          
+          <div class="col-md-12"></div>
 
-          <div class="col-md-12">
+          <div class="col-md-10">
             <img src="../img/citibike_DemographicsMethodology.png"> 
           </div>
-          <!-- <div class="col-md-12"></div> -->
-          <div class="col-md-12">
+          <div class="col-md-10">
             <img src="../img/citibike_NetworkMethodology.png"> 
           </div>
 
