--- a/projects/pier.html
+++ b/projects/pier.html
@@ -68,27 +68,25 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-8">
-            <img src="../img/pier_poolvignette.png"> 
-          </div>
-          <div class="col-md-8">
-            <img src="../img/pier_siteAnalysis+Plan.png"> 
-          </div>
-          <div class="col-md-8">
-            <img src="../img/pier_Program.png"> 
-          </div>          
           <div class="col-md-12">
-            <img src="../img/pier_typology.png"> 
+            <img src="../img/pier_poolVignette.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/pier_siteAnalysis.png"> 
+          </div>
+<!--           <div class="col-md-8">
+            <img src="../img/pier_isometricProgram.png"> 
+          </div>   -->        
+          <div class="col-md-8">
+            <img src="../img/pier_typologyDiagram.png"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/pier_sections.png"> 
           </div>
           <div class="col-md-12">
             <img src="../img/pier_plan.png"> 
           </div>
-          <div class="col-md-12">
-            <img src="../img/pier_longSection.png"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/pier_crossSection.png"> 
-          </div>          
+  
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
           </div>
