--- a/projects/subway.html
+++ b/projects/subway.html
@@ -71,6 +71,9 @@
           <div class="col-md-8">
             <img src="../img/subway_plan.png"> 
           </div>       
+          <div class="col-md-4">
+            <img src="../img/subway_sitePlan.png"> 
+          </div>  
           <div class="col-md-12">
             <img src="../img/subway_crossSection.png"> 
           </div>
@@ -79,7 +82,7 @@
           </div>
           <div class="col-md-12">
             <img src="../img/subway_section2+space.png"> 
-          </div>
+          </div>  
           <div class="col-md-8">
             <img src="../img/subway_frontElevation.png"> 
           </div>   
