updated front page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
       <div class="row masonry-container">
         <!-- change col-md-4 to change number of columns on page -->
 
+        <!-- PIER - core 1 -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/pier.html">
+              <img src="img/pier_poolVignette.jpg" alt="">
+              <h3 class="thumbnailTitle"> Hydro-habitat </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
+        <!-- SUBWAY - core 1 -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/subway.html">
+              <img src="img/subway_crossSection.png" alt="">
+              <h3 class="thumbnailTitle"> ProcessionalPlanes </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
         <!-- CORNER - core 1 -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
