updated front page w gifs

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/subway.html">
+              <!-- <img src="img/intro_Subway.gif" alt=""> -->
               <img src="img/subway_crossSection.png" alt="">
               <h3 class="thumbnailTitle"> Processional Planes </h3>
             </a>
@@ -80,7 +81,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/corner.html">
-              <img src="img/intro_Corner.png" alt="">
+              <img src="img/intro_Corner.gif" alt="">
               <h3 class="thumbnailTitle"> Deconstructed Jenga </h3>
             </a>
           </div>
@@ -90,7 +91,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/citibike.html">
-              <img src="img/intro_CitiBike.png" alt="">
+              <img src="img/intro_CitiBike.gif" alt="">
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
             </a>
           </div>
@@ -101,18 +102,8 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/MCDA_library.html">
-              <img src="img/intro_MCDA_GIS.png" alt="">
+              <img src="img/intro_MCDA.gif" alt="">
               <h3 class="thumbnailTitle"> Siting Libraries </h3>
-            </a>
-          </div>
-        </div><!--/.item  -->
-
-        <!-- Logo Design for Tolu  -->
-        <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> 
-            <a href="projects/theread.html">
-              <img src="img/intro_LogoTheRead.png" alt="">
-              <h3 class="thumbnailTitle"> The Read </h3>
             </a>
           </div>
         </div><!--/.item  -->
@@ -126,6 +117,7 @@
             </a> 
           </div>
         </div><!--/.item  -->
+
         <!-- Visualization critique datavis  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
@@ -140,7 +132,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/urbansprawl.html">
-              <img src="img/intro_DMC3.png" alt="">
+              <img src="img/intro_dmc.gif" alt="">
               <h3 class="thumbnailTitle"> Predicting Urban Sprawl </h3>
             </a>
           </div>
@@ -150,7 +142,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/library.html">
-              <img src="img/intro_Library.png" alt="">
+              <img src="img/intro_Library.gif" alt="">
               <h3 class="thumbnailTitle"> Convergence </h3>
             </a>
           </div>
@@ -160,7 +152,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/globaltrajectories.html">
-              <img src="img/indResearch_thumbnail.jpg" alt="">
+              <img src="img/intro_IndResearch.gif" alt="">
               <h3 class="thumbnailTitle"> Global Trajectories: Local Origins </h3>
             </a>
           </div>
@@ -170,7 +162,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/datascapes.html">
-              <img src="img/intro_Flatbush.png" alt="">
+              <img src="img/intro_datascapes.gif" alt="">
               <h3 class="thumbnailTitle"> Mapping the "Vibe" </h3>
             </a>
           </div>
@@ -180,8 +172,18 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/bridge.html">
-              <img src="img/intro_Bridge.jpg" alt="">
+              <img src="img/intro_Bridge.gif" alt="">
               <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
+        <!-- Logo Design for Tolu  -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/theread.html">
+              <img src="img/intro_LogoTheRead.gif" alt="">
+              <h3 class="thumbnailTitle"> The Read </h3>
             </a>
           </div>
         </div><!--/.item  -->
