--- a/projects/library.html
+++ b/projects/library.html
@@ -68,8 +68,8 @@
       <div class="row">
         <div class="col-md-9">
 
-          <div class="col-md-8">
-            <img src="../img/library_conceptComposite.png"> 
+          <div class="col-md-12">
+            <img src="../img/intro_Library.gif"> 
           </div>     
 
           <div class="col-md-12">
