fixed broken links

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/citibike.html">
-              <img src="img/intro_CitiBike.gif" alt="">
+              <img src="img/intro_Citibike.gif" alt="">
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
             </a>
           </div>
@@ -143,7 +143,7 @@
           <div class="thumbnail"> 
             <a href="projects/library.html">
               <img src="img/intro_Library.gif" alt="">
-              <h3 class="thumbnailTitle"> Convergence </h3>
+              <h3 class="thumbnailTitle"> Intersecting Program </h3>
             </a>
           </div>
         </div><!--/.item  -->
@@ -162,7 +162,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/datascapes.html">
-              <img src="img/intro_datascapes.gif" alt="">
+              <img src="img/intro_Datascapes.gif" alt="">
               <h3 class="thumbnailTitle"> Mapping the "Vibe" </h3>
             </a>
           </div>
