added new pages for projects

--- a/index.html
+++ b/index.html
@@ -56,6 +56,46 @@
       <div class="row masonry-container">
         <!-- change col-md-4 to change number of columns on page -->
 
+        <!-- HOUSING - core III-->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/pier.html">
+              <img src="img/intro_housing.gif" alt="">
+              <h3 class="thumbnailTitle"> Preserved Traces, Interstitial Spaces </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
+        <!-- TECH - theatre -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/pier.html">
+              <img src="img/intro_tech-theatre.gif" alt="">
+              <h3 class="thumbnailTitle"> City, Theatre, Park </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
+        <!-- LIBRARY - Core II - analysis -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/pier.html">
+              <img src="img/intro_libraryanalysis.png" alt="">
+              <h3 class="thumbnailTitle"> Dumbo: Analysis of An Urban Condition </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+
+        <!-- LIBRARY - Core II - project -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/pier.html">
+              <img src="img/intro_libraryproject.gif" alt="">
+              <h3 class="thumbnailTitle"> Innovation Library, An Ode to the Museum </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->                        
+
         <!-- PIER - core 1 -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
@@ -91,7 +131,8 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/citibike.html">
-              <img src="img/intro_Citibike.gif" alt="">
+              <!-- <img src="img/intro_Citibike.gif" alt=""> -->
+              <img src="../img/citibike_FinalCover.jpg">
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
             </a>
           </div>
@@ -152,7 +193,8 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/globaltrajectories.html">
-              <img src="img/intro_IndResearch.gif" alt="">
+              <!-- <img src="img/intro_IndResearch.gif" alt=""> -->
+              <img src="../img/indResearch_outsidebook.jpg">
               <h3 class="thumbnailTitle"> Global Trajectories: Local Origins </h3>
             </a>
           </div>
@@ -172,21 +214,22 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/bridge.html">
-              <img src="img/intro_Bridge.gif" alt="">
+              <!-- <img src="img/intro_Bridge.gif" alt=""> -->
+              <img src="../img/bridge_SitePlan.png"> 
               <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
             </a>
           </div>
         </div><!--/.item  -->
 
         <!-- Logo Design for Tolu  -->
-        <div class="col-md-4 col-sm-6 item">
+        <!-- <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/theread.html">
               <img src="img/intro_LogoTheRead.gif" alt="">
               <h3 class="thumbnailTitle"> The Read </h3>
             </a>
           </div>
-        </div><!--/.item  -->
+        </div> --><!--/.item  -->
 
         <!-- PAINTINGS  -->
    <!--      <div class="col-md-4 col-sm-6 item">
