added tech theatre projects, and finalized links in index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- HOUSING - core III-->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="projects/pier.html">
+            <a href="projects/housing.html">
               <img src="img/intro_housing.gif" alt="">
               <h3 class="thumbnailTitle"> Preserved Traces, Interstitial Spaces </h3>
             </a>
@@ -69,7 +69,7 @@
         <!-- TECH - theatre -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="projects/pier.html">
+            <a href="projects/tech-theatre.html">
               <img src="img/intro_tech-theatre.gif" alt="">
               <h3 class="thumbnailTitle"> City, Theatre, Park </h3>
             </a>
@@ -79,7 +79,7 @@
         <!-- LIBRARY - Core II - analysis -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="projects/pier.html">
+            <a href="projects/libraryanalysis.html">
               <img src="img/intro_libraryanalysis.png" alt="">
               <h3 class="thumbnailTitle"> Dumbo: Analysis of An Urban Condition </h3>
             </a>
@@ -89,7 +89,7 @@
         <!-- LIBRARY - Core II - project -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="projects/pier.html">
+            <a href="projects/libraryproject.html">
               <img src="img/intro_libraryproject.gif" alt="">
               <h3 class="thumbnailTitle"> Innovation Library, An Ode to the Museum </h3>
             </a>
