added content for new projects

--- a/projects/housing.html
+++ b/projects/housing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Global Trajectories </title>
+    <title>Tola Oniyangi | Preserved Traces </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -70,22 +70,51 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-8" >
-            <div id="linkedImage">
-              <a href="../pdf/globaltrajectories.pdf" target="_blank">
-                <img src="../img/indResearch_outsidebook.jpg">
-              </a>   
-            </div>
+          <div class="col-md-12" >
+            <img src="../img/housing_process.gif">
+          </div>
+          <div class="col-md-12">
+            <img src="../img/housing_wallsections.jpg"> 
           </div>
 
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_1.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/housing_plan-1st.jpg"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_2.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/housing_plan-2nd.jpg"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_4.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/housing_plan-3rd.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/housing_plan-4th.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/housing_section.jpg"> 
+          </div>
+
+          <div class="col-md-12">
+            <img src="../img/housing_unitplans_EXISTING.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/housing_unitplans-NEW.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/housing_unitplans-TOWER.jpg"> 
+          </div>
+
+          <div class="col-md-12">
+            <img src="../img/housing_render-interior.jpg"> 
+          </div> 
+          <div class="col-md-12">
+            <img src="../img/housing_render-interstitial.jpg"> 
+          </div>
+
+          <div class="col-md-6">
+            <img src="../img/housing_model-all.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/housing_model-sectional.jpg"> 
           </div>
 
           <div class="footer">
