--- a/projects/libraryanalysis.html
+++ b/projects/libraryanalysis.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Global Trajectories </title>
+    <title>Tola Oniyangi | Dumbo Analysis </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -70,22 +70,33 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-8" >
-            <div id="linkedImage">
-              <a href="../pdf/globaltrajectories.pdf" target="_blank">
-                <img src="../img/indResearch_outsidebook.jpg">
-              </a>   
-            </div>
-          </div>
 
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_1.jpg"> 
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_1_lib.png"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_2.jpg"> 
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_2_libzoomin.png"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_4.jpg"> 
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_openSpace.png"> 
+          </div>
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_transport.png"> 
+          </div>
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_landuseTech.png"> 
+          </div>
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_demoA.png"> 
+          </div>
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_demoB.png"> 
+          </div>
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_demo.png"> 
+          </div>                    
+          <div class="col-md-10">
+            <img src="../img/libraryanalysis_concept.png"> 
           </div>
 
           <div class="footer">
