--- a/projects/tech-theatre.html
+++ b/projects/tech-theatre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Citi Bike Accessibility </title>
+    <title>Tola Oniyangi | City, Theatre, Park </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -71,7 +71,7 @@
           
           <div class="col-md-12">
             <div id="linkedImage">
-              <a href="../pdf/tech-theatre_CDset.pdf" target="_blank">
+              <a href="../pdf/tech-theatre_CD-set.pdf" target="_blank">
                 <img src="../img/tech-theatre_concept.jpg">
               </a>   
             </div>
