--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Global Trajectories </title>
+    <title>Tola Oniyangi | Innovation Library </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -70,22 +70,30 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-8" >
-            <div id="linkedImage">
-              <a href="../pdf/globaltrajectories.pdf" target="_blank">
-                <img src="../img/indResearch_outsidebook.jpg">
-              </a>   
-            </div>
-          </div>
 
           <div class="col-md-8">
-            <img src="../img/indResearch_Page_1.jpg"> 
+            <img src="../img/libraryproject_circulation_program.png"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_2.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/libraryproject_section.png"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/indResearch_Page_4.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/libraryproject_1stfloor.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/libraryproject_2ndfloor.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/libraryproject_3rdfloor.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/libraryproject_4thfloor.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/libraryproject_5thfloor.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/libraryproject_render.png"> 
           </div>
 
           <div class="footer">
