finished updating website - first pass

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail">
             <a href="projects/airbnb.html">
-              <img src="img/DV-Sp17_GroupTBD-sm.gif" alt="">
+              <!-- <img src="img/DV-Sp17_GroupTBD-sm.gif" alt=""> -->
+              <img src="img/intro_airbnb.jpg" alt="">
               <h3 class="thumbnailTitle"> Airbnb Analysis </h3>
             </a> 
           </div>
@@ -163,7 +164,8 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/datasketches.html">
-              <img src="img/datasketches_animation.gif" alt="">
+              <!-- <img src="img/datasketches_animation.gif" alt=""> -->
+              <img src="img/intro_datasketches.jpg" alt="">
               <h3 class="thumbnailTitle"> Visualization Critique </h3>
             </a>
           </div>
@@ -194,7 +196,7 @@
           <div class="thumbnail"> 
             <a href="projects/globaltrajectories.html">
               <!-- <img src="img/intro_IndResearch.gif" alt=""> -->
-              <img src="../img/indResearch_outsidebook.jpg">
+              <img src="img/indResearch_outsidebook.jpg">
               <h3 class="thumbnailTitle"> Global Trajectories: Local Origins </h3>
             </a>
           </div>
@@ -204,7 +206,8 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/datascapes.html">
-              <img src="img/intro_Datascapes.gif" alt="">
+              <!-- <img src="img/intro_datascapes.gif" alt=""> -->
+              <img src="img/intro_datascapes.jpg" alt="">
               <h3 class="thumbnailTitle"> Mapping the "Vibe" </h3>
             </a>
           </div>
@@ -215,7 +218,7 @@
           <div class="thumbnail"> 
             <a href="projects/bridge.html">
               <!-- <img src="img/intro_Bridge.gif" alt=""> -->
-              <img src="../img/bridge_SitePlan.png"> 
+              <img src="img/bridge_SitePlan.png"> 
               <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
             </a>
           </div>
