--- a/projects/housing.html
+++ b/projects/housing.html
@@ -70,9 +70,25 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-12" >
+          <!-- <div class="col-md-10" >
             <img src="../img/housing_process.gif">
-          </div>
+          </div> -->
+          <div class="col-md-8" >
+            <img src="../img/housing_process1.jpg">
+          </div>       
+          <div class="col-md-8" >
+            <img src="../img/housing_process2.jpg">
+          </div> 
+          <div class="col-md-8" >
+            <img src="../img/housing_process3.jpg">
+          </div> 
+          <div class="col-md-8" >
+            <img src="../img/housing_process4.jpg">
+          </div> 
+          <div class="col-md-8" >
+            <img src="../img/housing_process5.jpg">
+          </div> 
+
           <div class="col-md-12">
             <img src="../img/housing_wallsections.jpg"> 
           </div>
@@ -94,7 +110,7 @@
           </div>
 
           <div class="col-md-12">
-            <img src="../img/housing_unitplans_EXISTING.jpg"> 
+            <img src="../img/housing_unitplans-EXISTING.jpg"> 
           </div>
           <div class="col-md-12">
             <img src="../img/housing_unitplans-NEW.jpg"> 
@@ -111,11 +127,17 @@
           </div>
 
           <div class="col-md-6">
-            <img src="../img/housing_model-all.jpg"> 
-          </div>
-          <div class="col-md-6">
             <img src="../img/housing_model-sectional.jpg"> 
           </div>
+
+          <div class="col-md-6">
+            <div class="col-md-12">
+              <img src="../img/housing_model-all.jpg"> 
+            </div>
+            <div class="col-md-12">
+              <img src="../img/housing_model-site.jpg"> 
+            </div>     
+          </div>                    
 
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
