--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -93,6 +93,9 @@
             <img src="../img/libraryproject_5thfloor.jpg"> 
           </div>
           <div class="col-md-6">
+            <img src="../img/libraryproject_walkwayrender.png"> 
+          </div>
+         <div class="col-md-6">
             <img src="../img/libraryproject_render.png"> 
           </div>
 
