--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -71,26 +71,46 @@
       <div class="row">
         <div class="col-md-9">
 
+          <div class="col-md-12">
+            <div class="col-md-4">
+              <img src="../img/ADR_icon_1st.png"> 
+            </div>
+            <div class="col-md-4">
+              <img src="../img/ADR_icon_2nd.png"> 
+            </div>
+            <div class="col-md-4">
+              <img src="../img/ADR_icon_3rd.png"> 
+            </div>
+          </div>
+
+          <div class="col-md-8">
+            <img src="../img/ADR_interior_postcard.jpg"> 
+          </div>
+
           <div class="col-md-8">
             <img src="../img/libraryproject_circulation_program.png"> 
+          </div>          
+          <div class="col-md-8">
+            <img src="../img/libraryproject_structure.png"> 
           </div>
           <div class="col-md-12">
             <img src="../img/libraryproject_section.png"> 
           </div>
+
           <div class="col-md-12">
-            <img src="../img/libraryproject_1stfloor.jpg"> 
+            <img src="../img/libraryproject_1stFloor.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/libraryproject_2ndfloor.jpg"> 
+            <img src="../img/libraryproject_2ndFloor.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/libraryproject_3rdfloor.jpg"> 
+            <img src="../img/libraryproject_3rdFloor.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/libraryproject_4thfloor.jpg"> 
+            <img src="../img/libraryproject_4thFloor.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/libraryproject_5thfloor.jpg"> 
+            <img src="../img/libraryproject_5thFloor.jpg"> 
           </div>
           <div class="col-md-6">
             <img src="../img/libraryproject_walkwayrender.png"> 
