--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -73,26 +73,29 @@
 
           <div class="col-md-12">
             <div class="col-md-4">
-              <img src="../img/ADR_icon_1st.png"> 
+              <img src="../img/ADR_icon_1st.png" onclick="openModal();currentSlide(1)" class="hover-shadow"> 
             </div>
             <div class="col-md-4">
-              <img src="../img/ADR_icon_2nd.png"> 
+              <img src="../img/ADR_icon_2nd.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow"> 
             </div>
             <div class="col-md-4">
-              <img src="../img/ADR_icon_3rd.png"> 
+              <img src="../img/ADR_icon_3rd.png" onclick="openModal();currentSlide(3)" class="hover-shadow"> 
             </div>
           </div>
 
-          <div class="col-md-8">
-            <img src="../img/ADR_interior_postcard.jpg"> 
-          </div>
+          <div class="col-md-12">
+            <div class="col-md-6">
+              <img src="../img/ADR_interior_postcard.jpg"> 
+            </div>
+            <div class="col-md-6">
+              <img src="../img/libraryproject_structure.png">
+            </div>      
+          </div>      
 
           <div class="col-md-8">
             <img src="../img/libraryproject_circulation_program.png"> 
-          </div>          
-          <div class="col-md-8">
-            <img src="../img/libraryproject_structure.png"> 
-          </div>
+          </div>   
+
           <div class="col-md-12">
             <img src="../img/libraryproject_section.png"> 
           </div>
@@ -112,12 +115,12 @@
           <div class="col-md-12">
             <img src="../img/libraryproject_5thFloor.jpg"> 
           </div>
-          <div class="col-md-6">
+<!--           <div class="col-md-6">
             <img src="../img/libraryproject_walkwayrender.png"> 
           </div>
          <div class="col-md-6">
             <img src="../img/libraryproject_render.png"> 
-          </div>
+          </div> -->
 
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
@@ -125,6 +128,58 @@
         </div>
       </div>
     </div>
+    <!-- The Modal/Lightbox -->
+<div id="myModal" class="modal">
+  <span class="close cursor" onclick="closeModal()">&times;</span>
+  <div class="modal-content">
+
+    <div class="mySlides">
+      <div class="numbertext">1 / 4</div>
+      <img src="ADR_icon_1st.png" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">2 / 4</div>
+      <img src="ADR_icon_1st.png" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">3 / 4</div>
+      <img src="ADR_icon_1st.png" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">4 / 4</div>
+      <img src="img4_wide.jpg" style="width:100%">
+    </div>
+
+    <!-- Next/previous controls -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    <!-- Caption text -->
+    <div class="caption-container">
+      <p id="caption"></p>
+    </div>
+
+    <!-- Thumbnail image controls -->
+    <div class="column">
+      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(1)" alt="Nature">
+    </div>
+
+    <div class="column">
+      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(2)" alt="Snow">
+    </div>
+
+    <div class="column">
+      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(3)" alt="Mountains">
+    </div>
+
+    <div class="column">
+      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(4)" alt="Lights">
+    </div>
+  </div>
+</div>
 
   <!-- links to libraries -->
     <!--jQuery via Google CDN -->
