--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -135,22 +135,22 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="ADR_icon_1st.png" style="width:100%">
+      <img src="../img/ADR_icon_1st.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="ADR_icon_1st.png" style="width:100%">
+      <img src="../img/ADR_icon_1st.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="ADR_icon_1st.png" style="width:100%">
+      <img src="../img/ADR_icon_1st.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="img4_wide.jpg" style="width:100%">
+      <img src="../img/img4_wide.jpg" style="width:100%">
     </div>
 
     <!-- Next/previous controls -->
@@ -164,19 +164,19 @@
 
     <!-- Thumbnail image controls -->
     <div class="column">
-      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(1)" alt="Nature">
+      <img class="demo" src="../img/ADR_icon_1st.png" onclick="currentSlide(1)" alt="Nature">
     </div>
 
     <div class="column">
-      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(2)" alt="Snow">
+      <img class="demo" src="../img/ADR_icon_1st.png" onclick="currentSlide(2)" alt="Snow">
     </div>
 
     <div class="column">
-      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(3)" alt="Mountains">
+      <img class="demo" src="../img/ADR_icon_1st.png" onclick="currentSlide(3)" alt="Mountains">
     </div>
 
     <div class="column">
-      <img class="demo" src="ADR_icon_1st.png" onclick="currentSlide(4)" alt="Lights">
+      <img class="demo" src="../img/ADR_icon_1st.png" onclick="currentSlide(4)" alt="Lights">
     </div>
   </div>
 </div>
